--- a/gallery.html
+++ b/gallery.html
@@ -125,6 +125,7 @@ footer {
     <img src="gall11.jpg" alt="gall11">
     <img src="gall12.jpg" alt="gall12">
     <img src="gall21.jpg" alt="gall21">
+    <img src="gall22.jpg" alt="gall22">
  
  
 </div>
